updated env var name to match heroku postgres element

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CONNECTION_STRING=postgresql://tristanbennett:@localhost:5432/art-bazaar
+DATABASE_URL=postgresql://tristanbennett:@localhost:5432/art-bazaar
 PORT=9000
